--- a/atwiki-Project/AtwikiManager/app/build.gradle
+++ b/atwiki-Project/AtwikiManager/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('libs/directtap_sdk_v1_1_3.jar')
 }
